ensured input streams were being closed properly